[package]
name = "static-atom"
version = "0.1.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
build = "build/build.rs"

[build-dependencies]
itertools = "0.7"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"

[profile.bench]
codegen-units = 1
lto = "fat"
