[package]
name = "static-atom"
description = "Fast parsing from a set of strings known at compile time"
version = "0.1.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
license = "MIT"
repository = "https://github.com/1tgr/rust-static-atom"

[dependencies]
itertools = "0.7"
serde = { version = "1", optional = true }
try_from = "0.2"

[features]
default = ["serde"]

[profile.release]
codegen-units = 1
lto = "fat"

[profile.bench]
codegen-units = 1
lto = "fat"