[package]
name = "static-atom-build"
description = "Glue between your build script and the static-atom crate"
version = "0.1.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
license = "MIT"
repository = "https://github.com/1tgr/rust-static-atom"

[dependencies]
heck = "0.3"
itertools = "0.7"
serde = { version = "1", optional = true }
try_from = "0.2"

[features]
default = ["serde"]
